uhire-API/k8s/deployment.yaml
# Keys and passwords are pulled from a k8s secret, then exported as environment variables. Those
# env vars are pulled in application.properties in the java project and passed to the mongo connection attributes.

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: uhire-api
  name: uhire-api
  namespace: default
spec:
  replicas: 2
  minReadySeconds: 50
  selector:
    matchLabels:
      app: uhire-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: uhire-api
    spec:
      containers:
      - image: zoolian/uhire-api:0.0.1.SNAPSHOT
        imagePullPolicy: IfNotPresent
        name: uhire-api
        ports:
        - name: liveness-port
          containerPort: 8080
        volumeMounts:
          - name: config-volume
            mountPath: /workspace/config
        #resources:
          #requests:
            #cpu: 100m
            #memory: 32Mi
          #limits:
            #cpu: 150m
            #memory: 128Mi
        readinessProbe:
          httpGet:
            path: /
            port: liveness-port
          failureThreshold: 5
          periodSeconds: 10
          initialDelaySeconds: 60
        livenessProbe:
          httpGet:
            path: /
            port: liveness-port
          failureThreshold: 5
          periodSeconds: 10
          initialDelaySeconds: 60
      volumes:
        - name: config-volume
          configMap:
            name: uhire-api-configmap
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: uhire-api
  name: uhire-api-svc
  namespace: default
spec:
  ports:
  #- nodePort: 30567
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: uhire-api
  sessionAffinity: ClientIP #Web app has sessions. Subsequent requests need to hit the same pod.
  #type: ClusterIP
