uhire-API/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  labels:
    app: uhire-api
  name: uhire-api
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30568
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: uhire-api
  sessionAffinity: None
  type: LoadBalancer
