uhire-API/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: uhire-api
  annotations:
    #kubernetes.io/ingress.global-static-ip-name: address-name  ##gcloud compute addresses create address-name --global
    networking.gke.io/managed-certificates: api2-jmscottnovels-com-tls
spec:
  rules:
  - host: api2.jmscottnovels.com
    http:
      paths:
      - backend:
          serviceName: uhire-api-svc
          servicePort: 8080
